--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,18 +1,23 @@
 trigger:
-  -main
-vmlmage: 'ubuntu-lates'
+  - main
+
+pool:
+  vmImage: 'ubuntu-latest'
+
 steps:
-# I. Python telepítése
--task: UsePythonVersion@0
-inputs:
-  versionSpec: '3.x'
-  addToPath: true
+# 1. Python telepítése
+- task: UsePythonVersion@0
+  inputs:
+    versionSpec: '3.x'
+    addToPath: true
+
 # 2. Függőségek telepítése
--script: |
-  python -m pip install —upgrade pip
-  pip install pytest
-displayName: 'Install dependencies'
+- script: |
+    python -m pip install --upgrade pip
+    pip install pytest
+  displayName: 'Install dependencies'
+
 # 3. Tesztek futtatása
--script: |
-  pytest
-displayName: 'Run tests'
+- script: |
+    pytest
+  displayName: 'Run tests'
